# daily-report-bot

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
app/: __init__.py  main.py
app/core/: config.py  db.py  time.py
app/domains/events/: __init__.py  models.py  repository.py  service.py
app/domains/jobs/: __init__.py  models.py  repository.py  service.py
app/domains/reports/: __init__.py  models.py  service.py
app/github/: __init__.py  client.py  repositories.py
app/metrics/: __init__.py  server.py
app/slack/: __init__.py  blocks.py  handlers.py  main.py
app/web/: __init__.py  main.py
app/worker/: __init__.py  jobs.py  main.py  scheduler.py
migrations/: 001_initial.sql
scripts/: run-and-log.py
tests/: test_db.py  test_events.py  test_github.py  test_jobs.py  test_metrics.py  test_reports.py  test_run_and_log.py  test_slack.py  test_smoke.py  test_web.py  test_worker.py
