[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "daily-report-bot"
version = "0.1.0"
description = "Server health and dev activity daily/weekly report bot"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "slack-bolt>=1.18.0",
  "uvicorn>=0.34",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28",
  "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
